# Cryptopals
# Problem set 1

add_executable (set1p1 set1p1.c)
target_link_libraries (set1p1 cryptopals -fsanitize=address)

add_executable (set1p2 set1p2.c)
target_link_libraries (set1p2 cryptopals -fsanitize=address)

add_executable (set1p3 set1p3.c)
target_link_libraries (set1p3 cryptopals -fsanitize=address)

add_executable (set1p4 set1p4.c)
target_link_libraries (set1p4 cryptopals -fsanitize=address)

add_executable (set1p5 set1p5.c)
target_link_libraries (set1p5 cryptopals -fsanitize=address)

add_executable (set1p6 set1p6.c)
target_link_libraries (set1p6 cryptopals -fsanitize=address)

add_executable (set1p7 set1p7.c)
target_link_libraries (set1p7 cryptopals -fsanitize=address)

add_executable (set1p8 set1p8.c)
target_link_libraries (set1p8 cryptopals -fsanitize=address)
